--- a/leaderboard.html
+++ b/leaderboard.html
@@ -117,7 +117,6 @@
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="joinatournament.html">Join a Tournament</a></li>
-                    <li><a href="pasttourn.html">Past Tournaments</a></li>
                     <li><a href="leaderboard.html">Leaderboard</a></li>
                 </ul>
             </li>
@@ -186,9 +185,10 @@
           <td><span class='hours'>0</span></td>
           <td><span class='hours'>0</span></td>
           <td>Print Sum of duration of this Row</td>
+        </tr>
           <tr>
             <td>LUX</td>
-            <td><span class='hours'>4.17</span></td>
+            <td><span class='hours'>4.167</span></td>
             <td><span class='hours'>0</span></td>
             <td><span class='hours'>6.4</span></td>
             <td>Print Sum of duration of this Row</td>
@@ -205,6 +205,13 @@
             <td><span class='hours'>5</span></td>
             <td><span class='hours'>0</span></td>
             <td><span class='hours'>8</span></td>
+            <td>Print Sum of duration of this Row</td>
+          </tr>
+          <tr>
+            <td>EDELWEISS</td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
             <td>Print Sum of duration of this Row</td>
           </tr>
           <tr>
@@ -235,7 +242,28 @@
             <td><span class='hours'>6.8</span></td>
             <td>Print Sum of duration of this Row</td>
           </tr>
-    </table><br>
+          <tr>
+            <td>DARWIN</td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
+            <td>Print Sum of duration of this Row</td>
+          </tr>
+          <tr>
+            <td>CoGeNT</td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
+            <td>Print Sum of duration of this Row</td>
+          </tr>
+          <tr>
+            <td>COUPP-60</td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
+            <td><span class='hours'>0</span></td>
+            <td>Print Sum of duration of this Row</td>
+          </tr>
+    </table><br><br>
 
     <h2 style="color:white"><b><i>Indirect Dark Matter and Astroparticle Members</i></b></h2>
     <table class="table table-bordered rowsum" style="color:white">
@@ -245,13 +273,6 @@
         <th style="text-align:center">ICHEP '18</th>
         <th style="text-align:center">APS April '19</th>
         <th style="text-align:center">Total Points</th>
-      </tr>
-      <tr>
-        <td>Super-Kamiokande</td>
-        <td><span class='hours'>5</span></td>
-        <td><span class='hours'>7</span></td>
-        <td><span class='hours'>0</span></td>
-        <td>Print Sum of duration of this Row</td>
       </tr>
       <tr>
         <td>Super-Kamiokande</td>
@@ -296,6 +317,20 @@
         <td>Print Sum of duration of this Row</td>
       </tr>
       <tr>
+        <td>FGST-LAT</td>
+        <td><span class='hours'>0</span></td>
+        <td><span class='hours'>0</span></td>
+        <td><span class='hours'>0</span></td>
+        <td>Print Sum of duration of this Row</td>
+      </tr>
+      <tr>
+        <td>CTA</td>
+        <td><span class='hours'>0</span></td>
+        <td><span class='hours'>0</span></td>
+        <td><span class='hours'>0</span></td>
+        <td>Print Sum of duration of this Row</td>
+      </tr>
+      <tr>
         <td>AMS</td>
         <td><span class='hours'>0</span></td>
         <td><span class='hours'>7</span></td>
@@ -325,8 +360,15 @@
       </tr>
       <tr>
         <td>ADMX</td>
-        <td><span class='hours'>6.17</span></td>
+        <td><span class='hours'>6.167</span></td>
         <td><span class='hours'>6</span></td>
+        <td><span class='hours'>0</span></td>
+        <td>Print Sum of duration of this Row</td>
+      </tr>
+      <tr>
+        <td>CERN Axion</td>
+        <td><span class='hours'>0</span></td>
+        <td><span class='hours'>0</span></td>
         <td><span class='hours'>0</span></td>
         <td>Print Sum of duration of this Row</td>
       </tr>
@@ -337,8 +379,7 @@
         <td><span class='hours'>0</span></td>
         <td>Print Sum of duration of this Row</td>
       </tr>
-      </table><br>
-
+      </table><br><br>
     <h2 style="color:white"><b><i>Neutrino Members</i></b></h2>
     <table class="table table-bordered rowsum" style="color:white">
       <tr>
@@ -425,7 +466,7 @@
         <td><span class='hours'>7.75</span></td>
         <td>Print Sum of duration of this Row</td>
       </tr>
-    </table><br>
+    </table><br><br>
 
     <h2 style="color:white"><b><i>LHC Members</i></b></h2>
     <table class="table table-bordered rowsum" style="color:white">
@@ -483,7 +524,7 @@
           </tr>
           <tr>
             <td>The Standard Model at CMS</td>
-            <td><span class='hours'>7.67</span></td>
+            <td><span class='hours'>7.667</span></td>
             <td><span class='hours'>0</span></td>
             <td><span class='hours'>7</span></td>
             <td>Print Sum of duration of this Row</td>
@@ -513,7 +554,7 @@
             <td>Research & Development, Upgrades, Detector Operation, & Instrumentation at CMS</td>
             <td><span class='hours'>7.5</span></td>
             <td><span class='hours'>6.2</span></td>
-            <td><span class='hours'>5.17</span></td>
+            <td><span class='hours'>5.167</span></td>
             <td>Print Sum of duration of this Row</td>
           </tr>
         </table><br>
