--- a/pasttourn.html
+++ b/pasttourn.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <style>
+  td
+  {
+    text-align:center;
+  }
     .flex-container
     {
         display: flex;
@@ -12,7 +16,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://cdn.pixabay.com/photo/2017/08/07/21/52/nature-2608274_1280.jpg");
+        background-image: url("https://cdn.pixabay.com/photo/2015/04/02/08/13/universe-703522_1280.jpg");
     }
     .cd-fixed-bg
     {
@@ -52,14 +56,6 @@
      {
         background-color: #555;
      }
-     th, td
-     {
-         text-align: center;
-     }
-.vertical-text
-{
-	transform: rotate(270deg);
-}
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -85,7 +81,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="tournamentlogin.js"></script>
 </head>
-<body onload="myFunction()">
+<body>
     <div class="cd-fixed-bg cd-fixed-bg--1">
     <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -137,3 +133,418 @@
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </nav>
+
+
+    <div class="w3-container">
+    <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
+    <div class="cd-scrolling-bg__content">
+
+    <h2 style="color:white"><b><i>April APS '19 Tournament</i></b></h2>
+    <div style="overflow-x:auto;">
+    <table class="table table-bordered" style="color:white">
+      <tr>
+        <th style="text-align:center">Executive</th>
+        <th style="text-align:center">Crew Roster Name</th>
+        <th style="text-align:center">Crew Roster</th>
+        <th style="text-align:center">Total Points</th>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>Viscous Meniscus</td>
+        <td><u data-toggle="modal" data-target="#myModal">See Crew Members</u></td>
+        <td>29.5</td>
+      </tr>
+          <div class="container">
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Crew Members</h4>
+                </div>
+                <div class="modal-body">
+                  <p style="text-align:left;">COHERENT - 9 points
+                  <span style="float:right;">R&D at CMS - 6.17 points</span></p><hr>
+                  <p style="text-align:left;">EDELWEISS - 0 points
+                  <span style="float:right;">PAMELA - 0 points</span></p><hr>
+                  <p style="text-align:left;">COSINE-100 - 8 points
+                  <span style="float:right;">ANTARES - 0 points</p><hr>
+                  <p style="text-align:left;">DUNE - 6.33 points
+                  <span style="float:right;">SUSY at CMS - 0 points</p><hr>
+                  <p style="text-align:left;">BOREXINO - 0 points
+                  <span style="float:right;">LUX-ZEPLIN - 0 points</p><hr>
+                  <p style="text-align:left;">DEAP-3600 - 0 points</p>
+                </div>
+                </div>
+            </div>
+          </div>
+        </div>
+
+        <tr>
+          <td>HR</td>
+          <td>Sagittarius A *</td>
+          <td><u data-toggle="modal" data-target="#myModal2">See Crew Members</u></td>
+          <td>22.5</td>
+        </tr>
+        <div class="container">
+                <!-- Modal -->
+        <div class="modal fade" id="myModal2" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Crew Members</h4>
+              </div>
+              <div class="modal-body">
+                <p style="text-align:left;">Super-Kamiokande - 9 points
+                <span style="float:right;">PICO - 7 points</span></p><hr>
+                <p style="text-align:left;">MAGIC - 0 points
+                <span style="float:right;">XMASS - 0 points</span></p><hr>
+                <p style="text-align:left;">MINOS - 8 points
+                <span style="float:right;">JUNO - 0 points</p><hr>
+                <p style="text-align:left;">Supersymmetry at ATLAS - 9 points
+                <span style="float:right;">Supersymmetry at CMS - 0 points</p><hr>
+                <p style="text-align:left;">MeV Gamma Ray - 6.5 points
+                <span style="float:right;">LUX-ZEPLIN - 0 points</p><hr>
+                <p style="text-align:left;">ADMX - 0 points</p>
+              </div>
+              </div>
+
+          </div>
+        </div>
+
+      </div>
+
+      <tr>
+        <td>Amy</td>
+        <td>The Bad Girls Club</td>
+        <td><u data-toggle="modal" data-target="#myModal3">See Crew Members</u></td>
+        <td>55.65</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal3" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">Exotica at CMS - 0 points
+              <span style="float:right;">Standard Model at ATLAS - 8.33 points</span></p><hr>
+              <p style="text-align:left;">T2K - 7.75 points
+              <span style="float:right;">ICARUS - 3.33 points</span></p><hr>
+              <p style="text-align:left;">IceCube - 8 points
+              <span style="float:right;">MAGIC - 0 points</p><hr>
+              <p style="text-align:left;">LUX - 6.4 points
+              <span style="float:right;">ArDM - 0 points</p><hr>
+              <p style="text-align:left;">MeV Gamma Ray - 6.5 points
+              <span style="float:right;">XENON - 6.33 points</p><hr>
+              <p style="text-align:left;">Supersymmetry at ATLAS - 9 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+
+      <tr>
+        <td>Zach</td>
+        <td>The Pizza Men</td>
+        <td><u data-toggle="modal" data-target="#myModal4">See Crew Members</u></td>
+        <td>32.41</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal4" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">Supersymmetry at CMS - 0 points
+              <span style="float:right;">LUX - 6.4 points</span></p><hr>
+              <p style="text-align:left;">ADMX - 0 points
+              <span style="float:right;">BOREXINO - 0 points</span></p><hr>
+              <p style="text-align:left;">CRESST - 0 points
+              <span style="float:right;">GAPS - 0 points</p><hr>
+              <p style="text-align:left;">NOvA - 6.85 points
+              <span style="float:right;">Research & Development at CMS - 5.167 points</p><hr>
+              <p style="text-align:left;">Standard Model at CMS - 7 points
+              <span style="float:right;">Exotica at CMS - 0 points</p><hr>
+              <p style="text-align:left;">Higgs Physics at CMS - 7 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+
+      <tr>
+        <td>Linda</td>
+        <td>ROOT of all Evil</td>
+        <td><u data-toggle="modal" data-target="#myModal5">See Crew Members</u></td>
+        <td>57.90</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal5" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">NOvA - 6.85 points
+              <span style="float:right;">MiniBooNE - 7.5 points</span></p><hr>
+              <p style="text-align:left;">SuperCDMS - 6.8 points
+              <span style="float:right;">LUX-ZEPLIN - 0 points</span></p><hr>
+              <p style="text-align:left;">IceCube - 8 points
+              <span style="float:right;">ADMX - 0 points</p><hr>
+              <p style="text-align:left;">Higgs Physics at ATLAS - 7.5 points
+              <span style="float:right;">Standard Model at CMS - 7 points</p><hr>
+              <p style="text-align:left;">Higgs Physics at CMS - 7 points
+              <span style="float:right;">Supersymmetry at CMS - 0 points</p><hr>
+              <p style="text-align:left;">Exotica at ATLAS - 7.25 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+
+      <tr>
+        <td>Quinn</td>
+        <td>Literally Anything</td>
+        <td><u data-toggle="modal" data-target="#myModal5">See Crew Members</u></td>
+        <td>58.17</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal5" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">Research & Development at CMS - 5.17 points
+              <span style="float:right;">Supersymmetry at ATLAS - 9 points</span></p><hr>
+              <p style="text-align:left;">DUNE - 6.33 points
+              <span style="float:right;">ICARUS - 3.33 points</span></p><hr>
+              <p style="text-align:left;">IceCube - 8 points
+              <span style="float:right;">Super-Kamiokande - 0 points</p><hr>
+              <p style="text-align:left;">PICO - 7 points
+              <span style="float:right;">DarkSide - 7 points</p><hr>
+              <p style="text-align:left;">Higgs Physics at CMS - 7 points
+              <span style="float:right;">Supersymmetry at CMS - 0 points</p><hr>
+              <p style="text-align:left;">Research & Development at ATLAS - 5.33 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+
+      <tr>
+        <td>Pierce</td>
+        <td>The Lame-O's</td>
+        <td><u data-toggle="modal" data-target="#myModal5">See Crew Members</u></td>
+        <td>20.07</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal5" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">HPS - 0 points
+              <span style="float:right;">GAPS - 0 points</span></p><hr>
+              <p style="text-align:left;">DARWIN - 0 points
+              <span style="float:right;">CoGeNT - 0 points</span></p><hr>
+              <p style="text-align:left;">PROSPECT - 6.4 points
+              <span style="float:right;">DEAP-3600 - 0 points</p><hr>
+              <p style="text-align:left;">Standard Model at ATLAS - 8.33 points
+              <span style="float:right;">Research & Development at ATLAS - 5.33 points</p><hr>
+              <p style="text-align:left;">BOREXNIO - 0 points
+              <span style="float:right;">CTA - 0 points</p><hr>
+              <p style="text-align:left;">COUPP-60 - 0 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+
+      <tr>
+        <td>Anna</td>
+        <td>The Pleiades</td>
+        <td><u data-toggle="modal" data-target="#myModal5">See Crew Members</u></td>
+        <td>47.42</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal5" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">IceCube - 8 points
+              <span style="float:right;">MeV Gamma Ray - 6.5 points</span></p><hr>
+              <p style="text-align:left;">PICASSO - 0 points
+              <span style="float:right;">LUX-ZEPLIN - 0 points</span></p><hr>
+              <p style="text-align:left;">JUNO - 0 points
+              <span style="float:right;">ICARUS - 3.33 points</p><hr>
+              <p style="text-align:left;">Exotica at ATLAS - 7.25 points
+              <span style="float:right;">CERN Axion - 0 points</p><hr>
+              <p style="text-align:left;">Higgs Physics at CMS - 7 points
+              <span style="float:right;">XENON - 6.33 points</p><hr>
+              <p style="text-align:left;">Supersymmetry at ATLAS - 9 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+
+      <tr>
+        <td>Duncan</td>
+        <td>Buncan</td>
+        <td><u data-toggle="modal" data-target="#myModal5">See Crew Members</u></td>
+        <td>19.79</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal5" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">XENON - 6.33 points
+              <span style="float:right;">FGST-LAT - 0 points</span></p><hr>
+              <p style="text-align:left;">DarkSide - 7 points
+              <span style="float:right;">GAPS - 0 points</span></p><hr>
+              <p style="text-align:left;">MicroBooNE - 6.44 points
+              <span style="float:right;">ADMX - 0 points</p><hr>
+              <p style="text-align:left;">Higgs Physics at CMS - 7 points
+              <span style="float:right;">Research & Development at ATLAS - 5.33 points</p><hr>
+              <p style="text-align:left;">PROSPECT - 6.4 points
+              <span style="float:right;">COUPP-60 - 0 points</p><hr>
+              <p style="text-align:left;">BOREXINO - 0 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+
+      <tr>
+        <td>Thomas</td>
+        <td>The Inverse Squares</td>
+        <td><u data-toggle="modal" data-target="#myModal5">See Crew Members</u></td>
+        <td>43.17</td>
+      </tr>
+      <div class="container">
+              <!-- Modal -->
+      <div class="modal fade" id="myModal5" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Crew Members</h4>
+            </div>
+            <div class="modal-body">
+              <p style="text-align:left;">PAMELA - 0 points
+              <span style="float:right;">COHERENT - 9 points</span></p><hr>
+              <p style="text-align:left;">Standard Model at ATLAS - 8.33 points
+              <span style="float:right;">Standard Model at CMS - 7 points</span></p><hr>
+              <p style="text-align:left;">PICASSO - 0 points
+              <span style="float:right;">HESS - 0 points</p><hr>
+              <p style="text-align:left;">KATRIN - 8 points
+              <span style="float:right;">ICARUS - 3.33 points</p><hr>
+              <p style="text-align:left;">DARWIN - 0 points
+              <span style="float:right;">CRESST - 0 points</p><hr>
+              <p style="text-align:left;">MiniBooNE - 7.5 points</p>
+            </div>
+            </div>
+
+        </div>
+      </div>
+
+      </div>
+    </table>
+  </div>
+
+        <button id="myBtn" onclick="topFunction()">
+        <span class="glyphicon glyphicon-arrow-up"></span> Top </button>
+        <script>
+        window.onscroll = function() {scrollFunction()};
+        function scrollFunction()
+        {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20)
+            {
+                document.getElementById("myBtn").style.display = "block";
+            }
+            else
+            {
+                document.getElementById("myBtn").style.display = "none";
+            }
+        }
+        function topFunction()
+        {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+        </script>
+
+        <div class="flex-container">
+              <p style="color:white"><i>Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
+              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a> | &copy; 2018</i></p>
+       </div>
+       </div>
+       </div>
+
+       </body>
+       </html>
