--- a/pastconf.html
+++ b/pastconf.html
@@ -32,6 +32,11 @@
         border-radius: 5px;
         padding: 15px;
     }
+    .responsive
+    {
+        width: 100%;
+        height: auto;
+    }
     #myBtn
     {
         display: none;
@@ -136,12 +141,12 @@
     <div class="cd-scrolling-bg__content">
 
     <h4><a href="https://www.aps.org/meetings/baps/april18.cfm"><u style="color:white"> 1. April APS Meeting 2018 </u></h4></a>
-    <img class="left" src="https://www.aps.org/meetings/april/images/AM18_MeetingsPage_updated.png"></img>
+    <img class="left" src="https://www.aps.org/meetings/april/images/AM18_MeetingsPage_updated.png" class="responsive"></img>
 
     <hr>
 
     <h4><a href="https://www.ichep2018.org/"><u style="color:white"> 2. ICHEP Meeting 2018 </u></h4></a>
-    <img class="left" src="https://www.mdpi.com/img/misc/event_1508111564971.png"></img><br>
+    <img class="left" src="https://www.mdpi.com/img/misc/event_1508111564971.png" class="responsive"></img><br>
         <h5 style="color:white">"ICHEP is a series of international conferences that has been held every two years for more than 50 years, and is the reference conference of particle physics where most relevant results are presented.
             At ICHEP, physicists from around the world gather to share the latest advancements in particle physics, astrophysics/cosmology, and accelerator science and discuss plans for major future facilities."</h5>
 
