--- a/rules.html
+++ b/rules.html
@@ -212,6 +212,7 @@
             <div id="collapse4" class="panel-collapse collapse">
                 <ul class="list-group">
                     <li class="list-group-item"><font size="3"><i>Take a look into how Fantasy Physics hunts for and administers points to each Crew Member.</i></font></li></ul>
+                    <div style="overflow-x:auto;">
                 <table colspan="3" class="table table-bordered" style="color:black">
                     <tr>
                         <th scope="col" style="text-align:center"><font size="3"># of Feynmann Diagrams; +1</font></th>
@@ -229,6 +230,7 @@
                         <th scope="col" style="text-align:center"><font size="3"># of Significant Figures; +1</font></th>
                     </tr>
                 </table>
+            </div>
             </div>
         </div>
     </div>
