--- a/upcomingconf.html
+++ b/upcomingconf.html
@@ -32,6 +32,11 @@
         border-radius: 5px;
         padding: 15px;
     }
+    .responsive
+    {
+        width: 100%;
+        height: auto;
+    }
     #myBtn
     {
         display: none;
@@ -141,7 +146,7 @@
     <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
     <div class="cd-scrolling-bg__content">
 
-<img class="center" src="https://www.aps.org/meetings/april/images/April19_metadata_v2-1.png">
+<img class="center" src="https://www.aps.org/meetings/april/images/April19_metadata_v2-1.png" class="responsive">
 <h3 class="w3-center" style="text-align:center;color:white"><font face="sans-serif"><a href="https://www.aps.org/meetings/april/"><u style="color:white">"The APS April Meeting</a></u> encapsulates the full range of physical scales including astrophysics, particle physics, nuclear physics, and gravitation. To experience the meeting is to explore research from the "Quarks to the Cosmos (Q2C)," which is the true essence of the meeting."</h3>
 
 
